--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 *.npy
+*.jpg
+*.png
+*.rar
+src.txt
