--- a/.gitignore
+++ b/.gitignore
@@ -156,3 +156,7 @@ cython_debug/
 *.rar
 src.txt
 *.DESKTOP-9P4J4BR
+last models/mod 1 (origenal & 2 pre)/Test Prediction
+last models/mod 1 (origenal & 2 pre)/model.tfl.meta
+last models/mod 1 (origenal & 2 pre)/model.tfl.index
+last models/mod 1 (origenal & 2 pre)/model.tfl.data-00000-of-00001
